# rioxide

./: Cargo.toml  README.md  testfile.rkt
src/: cell.rs  cli.rs  container.rs  display.rs  ext.rs  macros.rs  main.rs
src/ast/: expr.rs  mod.rs
src/interpreter/: any.rs  context.rs  error.rs  eval_tree.rs  mod.rs  vars.rs
src/lexer/: cursor.rs  error.rs  mod.rs  token.rs
src/native/: common.rs  comparison.rs  compose.rs  debug.rs  error.rs  function.rs  mod.rs
src/native/impl/: branch.rs  common.rs  comparison.rs  compose.rs  debug.rs  list.rs  logic.rs  math.rs  mod.rs  string.rs  util.rs
src/native/impl/fos/: filter.rs  fold.rs  map.rs  mod.rs
src/parser/: cursor.rs  error.rs  mod.rs
src/primitives/: any.rs  body.rs  composed.rs  data_types.rs  expression_impl.rs  function.rs  mod.rs  ops.rs  reserved.rs
src/primitives/display/: any.rs  composed.rs  data_types.rs  mod.rs
src/primitives/syntax/: mod.rs
